# Parallel-Programming

./: .gitignore  .gitmodules  README.md
lab03/: CMakeLists.txt  main.c
lab06/src/: Histogram_test.java  Image.java  Obraz.java  Variant1.java  Variant2.java  Wariant1.java  Wariant2.java  histogramTest.java
lab08/lab08.3/: czyt_pis.c  czytelnia.c  czytelnia.h
lab08/lab08_2/: CMakeLists.txt  czyt_pis.c  czytelnia.c  czytelnia.h
lab08/lab8/: CMakeLists.txt  bariera.c  bariera.h  main.c
lab08/lab8 library/: CMakeLists.txt  czytelnia.h
lab10/PR_lab10/: CMakeLists.txt  main.c
lab10/PR_lab10_pde/: CMakeLists.txt  main.c
lab11/PR_lab11/: CMakeLists.txt  main.c
lab11/PR_lab11_relay/: CMakeLists.txt  main.c
lab11/PR_lab11_struct/: CMakeLists.txt  main.c
lab12/PR_lab12/: CMakeLists.txt  main.c
lab12/PR_lab12_pthreadsish/: CMakeLists.txt  main.c
lab12/PR_lab12_vector/: CMakeLists.txt  main.c
lab13/PR_lab13_calka/: CMakeLists.txt  main.c
lab13/PR_lab13_integral/: CMakeLists.txt  main.c
lab13/PR_lab13_vec/: CMakeLists.txt  main.c  mat_vec.c  mat_vec.h
